--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <div class="container">
     <h1>I'm Sorry</h1>
-    <p>Dear [Recipient's Name],</p>
+    <p>Dear Sharon,</p>
     <p>I want to sincerely apologize for everything. I realize I've made mistakes, and I'm truly sorry for any hurt or pain I've caused. I understand the importance of making things right, and I am committed to doing whatever it takes to rebuild trust and mend our relationship.</p>
     <p>Actions speak louder than words, and I am ready to demonstrate through my actions that I am dedicated to making amends. Please give me the opportunity to show you that I am committed to positive change.</p>
     <button onclick="redirect()">I Will Make Things Right</button>
