--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I'm Sorry</title>
+    <title>Apology</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             background-color: #f5f5f5;
+            color: #333;
             margin: 0;
             padding: 0;
             display: flex;
@@ -16,57 +17,45 @@
             height: 100vh;
         }
 
-        .container {
+        .apology-container {
             text-align: center;
             padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             max-width: 600px;
-            width: 90%;
+            width: 100%;
         }
 
         h1 {
-            color: #333;
+            color: #e74c3c;
         }
 
         p {
-            color: #555;
             line-height: 1.6;
+            margin-bottom: 20px;
         }
 
-        button {
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #45a049;
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 5px;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
+    <div class="apology-container">
+        <h1>I'm Sorry</h1>
+        <p>Dear Sharon,</p>
+        <p>I want to sincerely apologize for everything. I recognize my mistakes and the pain they may have caused you.</p>
+        <p>I am committed to making things right and learning from this experience. Your forgiveness means a lot to me, and I am willing to take the necessary steps to rebuild trust.</p>
+        <p>Thank you for your understanding and giving me the chance to make amends.</p>
+        <p>Sincerely,</p>
+        <p>Allan </p>
 
-<div class="container">
-    <h1>I'm Sorry</h1>
-    <p>Dear Sharon,</p>
-    <p>I want to sincerely apologize for everything. I realize I've made mistakes, and I'm truly sorry for any hurt or pain I've caused. I understand the importance of making things right, and I am committed to doing whatever it takes to rebuild trust and mend our relationship.</p>
-    <p>Actions speak louder than words, and I am ready to demonstrate through my actions that I am dedicated to making amends. Please give me the opportunity to show you that I am committed to positive change.</p>
-    <button onclick="redirect()">I Will Make Things Right</button>
-</div>
-
-<script>
-    function redirect() {
-        // You can replace the URL with any other page or resource you want to link to
-        window.location.href = "https://www.example.com";
-    }
-</script>
-
+        <!-- You can add an image or any other media to personalize the apology -->
+        <!-- <img src="your-image-url.jpg" alt="Apology Image"> -->
+    </div>
 </body>
 </html>
