--- a/index.html
+++ b/index.html
@@ -3,59 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apology</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .apology-container {
-            text-align: center;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            background-color: #fff;
-            max-width: 600px;
-            width: 100%;
-        }
-
-        h1 {
-            color: #e74c3c;
-        }
-
-        p {
-            line-height: 1.6;
-            margin-bottom: 20px;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 5px;
-            margin-top: 20px;
-        }
-    </style>
+    <title>Crochet PWA</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="apology-container">
-        <h1>I'm Sorry</h1>
-        <p>Dear Sharon,</p>
-        <p>I want to sincerely apologize for everything. I recognize my mistakes and the pain they may have caused you.</p>
-        <p>I am committed to making things right and learning from this experience. Your forgiveness means a lot to me, and I am willing to take the necessary steps to rebuild trust.</p>
-        <p>Thank you for your understanding and giving me the chance to make amends.</p>
-        <p>Sincerely,</p>
-        <p>Allan </p>
+    <header>
+        <h1>Crochet PWA</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <!-- You can add an image or any other media to personalize the apology -->
-        <!-- <img src="your-image-url.jpg" alt="Apology Image"> -->
-    </div>
+    <main>
+        <section id="home">
+            <h2>Welcome to Crochet PWA</h2>
+            <!-- Slideshow for images and videos -->
+            <div id="slideshow">
+                <!-- Slideshow content goes here -->
+            </div>
+        </section>
+
+        <section id="products">
+            <h2>Products</h2>
+            <!-- Product listing goes here -->
+        </section>
+
+        <section id="about">
+            <h2>About Me</h2>
+            <!-- About me content goes here -->
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <!-- Contact form goes here -->
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Crochet PWA. All rights reserved.</p>
+    </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
